# rlevo

./: .git-blame-ignore-revs  .gitignore  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  ETHICS_AND_AI.md  EXAMPLES.md  README.md  ROADMAP.md  SECURITY.md  TASKS.md  justfile
crates/burn-evorl/: Cargo.toml
crates/burn-evorl/src/: lib.rs
crates/evorl-benchmarks/: Cargo.toml  README.md
crates/evorl-benchmarks/examples/: ga_rastrigin.rs  tabular_bandit.rs
crates/evorl-benchmarks/src/: checkpoint.rs  env.rs  evaluator.rs  lib.rs  report.rs  seed.rs  storage.rs  suite.rs
crates/evorl-benchmarks/tests/: evaluator_smoke.rs
crates/evorl-core/: Cargo.toml  README.md
crates/evorl-core/examples/: README.md  basic_snapshot.rs  binary_encoded_genetic_algorithm.rs  bounded_position_state.rs  combat_action.rs  continuous_state_with_constraints.rs  game_action.rs  game_state.rs  general_ea_builder.rs  grid_agent.rs  grid_position.rs  grid_position_state.rs  normalized_complex_state.rs  position_history_state.rs  price_history_state.rs  real_valued_evolutionary_strategy.rs  robot_control_action.rs  simple_discrete_state.rs  tree_based_genetic_programming.rs  vehicle_control_action.rs
crates/evorl-core/src/: README.md  action.rs  agent.rs  base.rs  dynamics.rs  environment.rs  evolution.rs  experience.rs  lib.rs  memory.rs  metrics.rs  model.rs  render.rs  state.rs  tensor_convert.rs
crates/evorl-core/tests/: integration_test.rs
crates/evorl-envs/: Cargo.toml  README.md
crates/evorl-envs/examples/: README.md  cartpole_training.rs  chess_state_demo.rs
crates/evorl-envs/src/: lib.rs
crates/evorl-envs/tests/: grids_solvable.rs
crates/evorl-evolution/: Cargo.toml  README.md
crates/evorl-evolution/benches/: operators.rs
crates/evorl-evolution/examples/: sphere_showcase.rs
crates/evorl-evolution/src/: fitness.rs  genome.rs  lib.rs  population.rs  rng.rs  shaping.rs  strategy.rs
crates/evorl-evolution/tests/: backend_parity.rs  determinism.rs  rastrigin_run_suite.rs  swarm_rastrigin_suite.rs
crates/evorl-hybrid/: Cargo.toml
crates/evorl-rl/: Cargo.toml  README.md
crates/evorl-rl/benches/: c51_bench.rs  ddpg_bench.rs  dqn_bench.rs  ppg_bench.rs  ppo_bench.rs  qrdqn_bench.rs  sac_bench.rs  td3_bench.rs
crates/evorl-rl/examples/: c51_cart_pole.rs  ddpg_pendulum.rs  dqn_cart_pole.rs  ppg_cart_pole.rs  ppo_cart_pole.rs  ppo_pendulum.rs  qrdqn_cart_pole.rs  sac_pendulum.rs  td3_pendulum.rs
crates/evorl-rl/src/: algorithms.rs  lib.rs  utils.rs
crates/evorl-rl/tests/: c51_integration.rs  ddpg_integration.rs  dqn_integration.rs  ppg_integration.rs  ppo_integration.rs  qrdqn_integration.rs  sac_integration.rs  td3_integration.rs
crates/evorl-utils/: Cargo.toml
crates/evorl-utils/src/: math.rs
crates/rlevo/: Cargo.toml
crates/rlevo-benchmarks/: Cargo.toml  README.md  build.rs
crates/rlevo-benchmarks-report-client/: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html
crates/rlevo-benchmarks-report-client/src/: app.css  app.rs  charts.rs  inline_data.rs  lib.rs  playback.rs  series.rs  styled.rs  wire.rs
crates/rlevo-benchmarks/examples/: ga_rastrigin.rs  tabular_bandit.rs
crates/rlevo-benchmarks/src/: agent.rs  checkpoint.rs  env.rs  evaluator.rs  lib.rs  metrics_registry.rs  report.rs  storage.rs  suite.rs
crates/rlevo-benchmarks/tests/: evaluator_smoke.rs  wire_format_compat.rs
crates/rlevo-core/: Cargo.toml  README.md
crates/rlevo-core/examples/: README.md  continuous_state_with_constraints.rs  grid_agent.rs  state_constraints.rs
crates/rlevo-core/src/: action.rs  agent.rs  base.rs  bounds.rs  config.rs  environment.rs  evaluation.rs  evolution.rs  fitness.rs  lib.rs  metrics.rs  objective.rs  probability.rs  rate.rs  render.rs  reward.rs  state.rs  util.rs
crates/rlevo-core/tests/: integration_test.rs
crates/rlevo-environments/: Cargo.toml  README.md
crates/rlevo-environments/src/: episode.rs  lib.rs  pixel_grid.rs  tensor_decode.rs
crates/rlevo-environments/tests/: config_validation_chokepoint.rs  grids_solvable.rs  landscape_dim_guards.rs  pixel_grid_modality.rs  render_coverage.rs  time_limit_composition.rs
crates/rlevo-envs/: Cargo.toml  README.md
crates/rlevo-envs/examples/: README.md
crates/rlevo-envs/src/: lib.rs
crates/rlevo-envs/tests/: grids_solvable.rs
crates/rlevo-evolution/: Cargo.toml  README.md  katex-header.html
crates/rlevo-evolution/benches/: neat_xor.rs  operators.rs
crates/rlevo-evolution/examples/: ackley_showcase.rs  rastrigin_showcase.rs  sphere_showcase.rs
crates/rlevo-evolution/src/: fitness.rs  function_set.rs  genome.rs  lib.rs  local_search.rs  module_eval_fn.rs  observer.rs  param_reshaper.rs  population.rs  probability_model.rs  rng.rs  sampling.rs  shaping.rs  strategy.rs
crates/rlevo-evolution/tests/: backend_parity.rs  cma_es_convergence.rs  coevolution_forgetting.rs  determinism.rs  eda_smoke.rs  neuroevolution_bounded_nas.rs  neuroevolution_neat.rs  neuroevolution_supervised.rs  rastrigin_run_suite.rs  swarm_rastrigin_suite.rs
crates/rlevo-examples/: Cargo.toml  README.md
crates/rlevo-examples/src/: lib.rs
crates/rlevo-examples/tests/: neuroevolution_santa_fe_ant.rs
crates/rlevo-hybrid/: Cargo.toml  README.md
crates/rlevo-hybrid/src/: lib.rs  policy.rs  policy_neuroevolution.rs  rollout_fitness.rs
crates/rlevo-hybrid/tests/: cartpole_smoke.rs  stateful_rollout.rs
crates/rlevo-metrics-registry/: Cargo.toml  README.md
crates/rlevo-metrics-registry/src/: lib.rs
crates/rlevo-reinforcement-learning/: Cargo.toml  README.md  katex-header.html
crates/rlevo-reinforcement-learning/benches/: c51_bench.rs  ddpg_bench.rs  dqn_bench.rs  learn_step_bench.rs  ppg_bench.rs  ppo_bench.rs  qrdqn_bench.rs  sac_bench.rs  staging_bench.rs  td3_bench.rs
crates/rlevo-reinforcement-learning/examples/: ppo_cart_pole.rs  ppo_pendulum.rs
crates/rlevo-reinforcement-learning/src/: experience.rs  lib.rs  memory.rs  metrics.rs  (+2 more)
crates/rlevo-rl/: Cargo.toml  README.md
crates/rlevo-test-support/: Cargo.toml
crates/rlevo-utils/: Cargo.toml
(+957 files in other folders)
