[workspace]
resolver = "3"
members = [
    "crates/evorl-benchmarks",
    "crates/evorl-core",
    "crates/evorl-envs",
    "crates/evorl-evolution",
    "crates/evorl-hybrid",
    "crates/evorl-rl",
    "crates/evorl-utils",
]

[workspace.package]
version = "0.1.0"
authors = ["Anthony Torlucci"]
description = "Evolutionary Reinforcement Learning with Burn"
documentation = "https://github.com/anthonytorlucci/burn-evorl"
license = "MIT"
edition = "2024"
readme = "README.md"
repository = "https://github.com/anthonytorlucci/burn-evorl"

[workspace.dependencies]
# Core ML and tensor computation
burn = { version = "0.20.1", features = ["wgpu", "train", "tui", "metrics", "ndarray"] }
cubecl = { version = "0.9.0", features = ["wgpu"] }

# Utilities
rand = "0.10.1"
rand_distr = "0.6.0"
ringbuffer = "0.16.0"
serde = { version = "1.0.228", features = ["derive", "rc"] }

# Benchmarking and profiling
criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.14", features = ["flamegraph", "criterion"] }

# Logging (recommended for ML projects)
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Physics (Box2D-style environments)
rapier2d = { version = "0.32", features = ["enhanced-determinism"] }

# Testing
approx = "0.5"

[workspace.lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
