[workspace]
resolver = "3"
members = [
    "crates/rlevo",
    "crates/rlevo-benchmarks",
    "crates/rlevo-benchmarks-report-client",
    "crates/rlevo-core",
    "crates/rlevo-environments",
    "crates/rlevo-evolution",
    "crates/rlevo-examples",
    "crates/rlevo-hybrid",
    "crates/rlevo-metrics-registry",
    "crates/rlevo-reinforcement-learning",
    "crates/rlevo-test-support",
]

default-members = [
    "crates/rlevo",
    "crates/rlevo-benchmarks",
    "crates/rlevo-core",
    "crates/rlevo-environments",
    "crates/rlevo-evolution",
    "crates/rlevo-hybrid",
    "crates/rlevo-reinforcement-learning",
]

[workspace.package]
version = "0.3.0"
authors = ["Anthony Torlucci"]
description = "Deep Reinforcement Learning with Evolutionary Optimization"
license = "MIT OR Apache-2.0"
edition = "2024"
readme = "README.md"
repository = "https://github.com/anthonytorlucci/rlevo"
keywords = ["evolution", "deep-learning", "burn", "neural-network"]
categories = ["science", "algorithms", "simulation"]

[workspace.dependencies]
# Core ML and tensor computation
burn = { version = "0.21.0", features = ["wgpu", "train", "tui", "metrics", "flex"] }
cubecl = { version = "0.10.0", features = ["wgpu"] }

# Utilities
rand = "0.10.1"
rand_distr = "0.6.0"
ringbuffer = "0.16.0"
serde = { version = "1.0.228", features = ["derive", "rc"] }

# Benchmarking and profiling
criterion = { version = "0.8", features = ["html_reports"] }
pprof = { version = "0.15", features = ["flamegraph", "criterion"] }
# Pin the global thread pool to one thread in benches for reproducible
# floating-point results (burn-flex's gemm parallelises via rayon).
rayon = "1.12"

# Logging (recommended for ML projects)
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Physics (Box2D-style environments)
rapier2d = { version = "0.32", features = ["enhanced-determinism"] }
# Physics (MuJoCo-style locomotion environments)
rapier3d = { version = "0.32", features = ["enhanced-determinism"] }

# Synchronisation
parking_lot = "0.12"

# Testing
approx = "0.5"
proptest = { version = "1", default-features = false, features = ["std", "bit-set"] }

[workspace.lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
# Prefer explicit type annotations on bindings over type-qualified ::default() calls.
default_trait_access = "allow"
# burn and rapier introduce unavoidable duplicate versions in their transitive dep trees
# (rand 0.9 vs 0.10, thiserror 1.x vs 2.x, darling/hashbrown/itertools etc.).
multiple_crate_versions = "allow"
