[package]
name = "evorl-benchmarks"
version.workspace = true
authors.workspace = true
description = "Reproducible benchmarking harness for burn-evorl (RL + EO)"
documentation.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
evorl-core = { path = "../evorl-core" }
rayon = "1"
rand = { workspace = true }
rand_distr = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { version = "1", optional = true }
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

[dev-dependencies]
approx = { workspace = true }
evorl-envs = { path = "../evorl-envs" }
tracing-subscriber = { workspace = true }

[features]
default = ["json"]
json = ["dep:serde", "dep:serde_json"]
tui = ["dep:ratatui", "dep:crossterm"]

[lints]
workspace = true
