[package]
name = "evorl-core"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
burn = { workspace = true }
rand = { workspace = true }
ringbuffer = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
