[package]
name = "evorl-core"
version.workspace = true
authors.workspace = true
description = "Core traits and types for burn-evorl (internal crate — use `burn-evorl` for the full API)"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
burn = { workspace = true }
rand = { workspace = true }
ringbuffer = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
rand_distr = {workspace = true }

[dev-dependencies]
approx = { workspace = true }
