[package]
name = 'evorl-envs'
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
burn = { workspace = true }
evorl-core = { path = '../evorl-core' }
evorl-rl = { path = '../evorl-rl' }
rand = { workspace = true }
serde = { workspace = true }
rand_distr = {workspace = true }

[dev-dependencies]
approx = { workspace = true }

[features]
# Bandit algorithm selection (default is epsilon-greedy)
ucb = []        # Upper Confidence Bound algorithm
thompson = []   # Thompson Sampling algorithm

[[example]]
name = 'ten_armed_bandit_training'
path = 'examples/ten-armed-bandit/ten_armed_bandit_training.rs'

[[example]]
name = 'grid_empty_random'
path = 'examples/grids/grid_empty_random.rs'

[[example]]
name = 'grid_door_key_scripted'
path = 'examples/grids/grid_door_key_scripted.rs'

[[example]]
name = 'grid_memory_random'
path = 'examples/grids/grid_memory_random.rs'

[[example]]
name = 'cartpole_random'
path = 'examples/classic/cartpole_random.rs'

[[example]]
name = 'cartpole_timelimit'
path = 'examples/classic/cartpole_timelimit.rs'

[[example]]
name = 'mountain_car_random'
path = 'examples/classic/mountain_car_random.rs'

[[example]]
name = 'mountain_car_continuous_random'
path = 'examples/classic/mountain_car_continuous_random.rs'

[[example]]
name = 'pendulum_random'
path = 'examples/classic/pendulum_random.rs'

[[example]]
name = 'acrobot_random'
path = 'examples/classic/acrobot_random.rs'
