[package]
name = "evorl-evolution"
version.workspace = true
authors.workspace = true
description = "Tensor-native classical evolutionary algorithms for burn-evorl"
documentation.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
burn = { workspace = true }
evorl-core = { path = "../evorl-core" }
evorl-benchmarks = { path = "../evorl-benchmarks", default-features = false }
rand = { workspace = true }
rand_distr = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }
evorl-envs = { path = "../evorl-envs" }

[[bench]]
name = "operators"
harness = false

[[example]]
name = "sphere_showcase"
path = "examples/sphere_showcase.rs"

[features]
default = ["custom-kernels"]
# Enables custom CubeCL kernels on hot paths (tournament selection, DE trial
# vectors, fitness-proportionate selection). When disabled, pure-tensor
# fallbacks are used. Kernel implementations land in M4; the feature is
# declared now so downstream crates can pin their build configuration.
custom-kernels = []

[lints]
workspace = true
