[package]
name = "evorl-evolution"
version.workspace = true
authors.workspace = true
description = "Tensor-native classical evolutionary algorithms for burn-evorl"
documentation.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
burn = { workspace = true }
cubecl = { workspace = true, optional = true }
evorl-core = { path = "../evorl-core" }
evorl-benchmarks = { path = "../evorl-benchmarks", default-features = false }
rand = { workspace = true }
rand_distr = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }
evorl-envs = { path = "../evorl-envs" }

[[bench]]
name = "operators"
harness = false

[[example]]
name = "sphere_showcase"
path = "examples/sphere_showcase.rs"

[features]
default = ["custom-kernels"]
# Enables custom CubeCL kernels on hot paths. Two kernel slots are
# declared today: the fused pairwise-attract kernel used by Firefly
# (large-`N` path) and the fused Lévy-flight (Mantegna) kernel available
# to Cuckoo and Bat. Additional design placeholders for tournament
# selection, DE trial vectors, and fitness-proportionate selection remain
# unimplemented — see `src/ops/kernels/mod.rs`. When the feature is
# disabled, pure-tensor fallbacks are used; Firefly in that mode is
# capped at `pop_size ≤ 128` because the `O(N²D)` decomposition's memory
# grows as the cube of `N`.
custom-kernels = ["dep:cubecl"]

[lints]
workspace = true
