[package]
name = "evorl-hybrid"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
burn = { workspace = true }
evorl-core = { path = "../evorl-core" }
evorl-evolution = { path = "../evorl-evolution" }
evorl-rl = { path = "../evorl-rl" }
rand = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
