[package]
name = "evorl-hybrid"
version.workspace = true
authors.workspace = true
description = "Hybrid evolutionary + RL strategies for burn-evorl (internal crate — use `burn-evorl` for the full API)"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
burn = { workspace = true }
evorl-core = { path = "../evorl-core" }
evorl-evolution = { path = "../evorl-evolution" }
evorl-rl = { path = "../evorl-rl" }
rand = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
