[package]
name = "evorl-rl"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
burn = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
evorl-core = { path = "../evorl-core" }

[dev-dependencies]
approx = { workspace = true }
