[package]
name = "evorl-rl"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
burn = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
evorl-core = { path = "../evorl-core" }

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }
evorl-envs = { path = "../evorl-envs", default-features = false }
tracing-subscriber = { workspace = true }

[[example]]
name = "dqn_cart_pole"
path = "examples/dqn_cart_pole.rs"

[[example]]
name = "c51_cart_pole"
path = "examples/c51_cart_pole.rs"

[[example]]
name = "qrdqn_cart_pole"
path = "examples/qrdqn_cart_pole.rs"

[[bench]]
name = "dqn_bench"
path = "benches/dqn_bench.rs"
harness = false

[[bench]]
name = "c51_bench"
path = "benches/c51_bench.rs"
harness = false

[[bench]]
name = "qrdqn_bench"
path = "benches/qrdqn_bench.rs"
harness = false
