[package]
name = "rlevo-benchmarks"
version.workspace = true
authors.workspace = true
description = "Benchmarking harness for rlevo (internal crate — use `rlevo` for the full API)"
license.workspace = true
edition.workspace = true
readme = "README.md"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
build = "build.rs"

[dependencies]
rlevo-core = { path = "../rlevo-core", version = "0.3.1" }
# Shared single-source-of-truth metric registry (ADR-0015). Tiny no_std
# leaf crate, also depended on by the WASM report client.
rlevo-metrics-registry = { path = "../rlevo-metrics-registry", version = "0.3.1" }
# Population observer trait — only pulled in with the `record` feature
# so non-recording builds do not link burn through this crate.
rlevo-evolution = { path = "../rlevo-evolution", version = "0.3.1", optional = true, default-features = false }
rayon = "1"
rand = { workspace = true }
rand_distr = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { version = "1", optional = true }
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29", optional = true }
tracing-subscriber = { version = "0.3", optional = true, default-features = false, features = ["registry", "std"] }
bincode = { version = "2", optional = true, features = ["serde"] }
parking_lot = { workspace = true, optional = true }
toml = { version = "0.8", optional = true }
time = { version = "0.3", optional = true, features = ["formatting", "macros"] }
base64 = { version = "0.22", optional = true }

[dev-dependencies]
approx = { workspace = true }
tempfile = "3"
# Cross-crate compatibility test only: guards the wire-format mirror in
# the report client against schema drift. The client itself is not a
# build-time dep of any production crate.
rlevo-benchmarks-report-client = { path = "../rlevo-benchmarks-report-client" }

[features]
default = ["json"]
json = ["dep:serde", "dep:serde_json"]
tui = ["dep:ratatui", "dep:crossterm", "dep:tracing-subscriber"]
record = ["dep:bincode", "dep:parking_lot", "dep:toml", "dep:time", "dep:serde", "dep:tracing-subscriber", "dep:rlevo-evolution"]
# Static-HTML report emitter: random-access loader + single-file inliner
# (Milestone 5). Builds on `record`; adds `base64` for payload inlining
# and `serde_json` for the manifest JSON payload.
report = ["record", "dep:base64", "dep:serde_json"]

# Render LaTeX in docs (e.g. the cartpole physics) via KaTeX on docs.rs.
# The header must live inside this crate's own directory — docs.rs builds
# from the packaged tarball, which cannot contain files outside the crate
# root, so a `../../` path here silently works locally but 404s on docs.rs.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--html-in-header", "katex-header.html"]

[[bin]]
name = "export-report"
path = "src/bin/export_report.rs"
required-features = ["report"]

[lints]
workspace = true
