[package]
name = "rlevo-core"
version.workspace = true
authors.workspace = true
description = "Core traits and types for rlevo (internal crate — use `rlevo` for the full API)"
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
burn = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rand_distr = {workspace = true }

[dev-dependencies]
approx = { workspace = true }

# Render LaTeX in docs (e.g. TransitionDynamics) via KaTeX on docs.rs.
# The header must live inside this crate's own directory — docs.rs builds
# from the packaged tarball, which cannot contain files outside the crate
# root, so a `../../` path here silently works locally but 404s on docs.rs.
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
