[package]
name = 'rlevo-environments'
version.workspace = true
authors.workspace = true
description = "RL benchmark environments and landscapes for rlevo (internal crate — use `rlevo` for the full API)"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
burn = { workspace = true }
rlevo-core = { path = '../rlevo-core', version = "0.3.0" }
rlevo-benchmarks = { path = '../rlevo-benchmarks', version = "0.3.0", optional = true }
rand = { workspace = true }
serde = { workspace = true }
rand_distr = { workspace = true }
thiserror = { workspace = true }
rapier2d = { workspace = true, optional = true }
rapier3d = { workspace = true, optional = true }

[dev-dependencies]
approx = { workspace = true }
bincode = { version = "2", features = ["serde"] }

# Render LaTeX in docs (e.g. the cartpole physics) via KaTeX on docs.rs.
# The header must live inside this crate's own directory — docs.rs builds
# from the packaged tarball, which cannot contain files outside the crate
# root, so a `../../` path here silently works locally but 404s on docs.rs.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--html-in-header", "katex-header.html"]

[features]
default = ["box2d", "locomotion"]
# Box2D-style physics environments (rapier2d)
box2d = ["dep:rapier2d"]
# MuJoCo-style locomotion environments (rapier3d)
locomotion = ["dep:rapier3d"]
# `BenchAdapter` and preset `Suite` factories for the `rlevo-benchmarks` harness.
# Off by default to keep the base envs dep cone (rayon, tracing, serde_json) lean.
bench = ["dep:rlevo-benchmarks"]
# `RecordedEnvFamily` impls tying each built-in env to its recording family.
# Pulls in the harness's `record` tier on top of `bench`.
record = ["bench", "rlevo-benchmarks/record"]
